adjust fastlane to run test in processor

--- a/android/internal-processor/build.gradle
+++ b/android/internal-processor/build.gradle
@@ -18,9 +18,15 @@ import br.com.zup.beagle.Dependencies
 
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'java'
+apply from: "$rootDir/../jacoco.gradle"
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
+
+test {
+    useJUnitPlatform()
+}
 
 dependencies {
     implementation Dependencies.GeneralLibraries.kotlin
@@ -48,7 +54,6 @@ dependencies {
 
     testImplementation Dependencies.TestLibraries.junitApi
     testImplementation Dependencies.TestLibraries.junitEngine
-
 
 }
 
