--- a/android/processor/build.gradle
+++ b/android/processor/build.gradle
@@ -36,6 +36,17 @@ dependencies {
 
     implementation Dependencies.ProcessorLibraries.autoService
     kapt Dependencies.ProcessorLibraries.autoService
+
+    /*
+ *
+ * When put the library with testImplementation the test not compile
+ * Issue tracker: https://github.com/tschuchortdev/kotlin-compile-testing/issues/73
+ *
+ */
+    implementation Dependencies.TestLibraries.kotlinCompileTesting
+
+    testImplementation Dependencies.TestLibraries.junitApi
+    testImplementation Dependencies.TestLibraries.junitEngine
 }
 
 apply from: rootProject.file('../maven-publish.gradle')
