add jacoco in processor

--- a/android/processor/build.gradle
+++ b/android/processor/build.gradle
@@ -18,9 +18,14 @@ import br.com.zup.beagle.Dependencies
 
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
+apply from: "$rootDir/../jacoco.gradle"
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
+
+test {
+    useJUnitPlatform()
+}
 
 dependencies {
     implementation Dependencies.GeneralLibraries.kotlin
