Adding Json annotation to models

--- a/android/automated-tests/build.gradle
+++ b/android/automated-tests/build.gradle
@@ -94,6 +94,8 @@ dependencies {
     androidTestImplementation Dependencies.TestLibraries.testRules
     androidTestImplementation Dependencies.TestLibraries.testRunner
     androidTestImplementation Dependencies.TestLibraries.testExt
+
+    implementation Dependencies.MoshiLibraries.moshi
 }
 
 def getTestTags() {
