--- a/android/preview/build.gradle
+++ b/android/preview/build.gradle
@@ -25,6 +25,7 @@ apply from: rootProject.file('jacoco-android.gradle')
 android {
     compileSdkVersion Dependencies.Versions.compileSdk
     buildToolsVersion Dependencies.Versions.buildTools
+    testOptions.unitTests.includeAndroidResources = true
 
     defaultConfig {
         minSdkVersion Dependencies.Versions.minSdk
@@ -33,6 +34,7 @@ android {
         versionCode Dependencies.Releases.versionCode
         versionName "${Dependencies.Releases.beagleVersionName}"
 
+        testInstrumentationRunner Dependencies.GeneralNames.testInstrumentationRunner
         consumerProguardFiles Dependencies.GeneralNames.consumerProguard
     }
 
@@ -47,6 +49,7 @@ android {
     }
 
     testOptions {
+
         unitTests.all {
             useJUnitPlatform()
         }
@@ -63,8 +66,16 @@ dependencies {
 
     // Unit Testing
     testImplementation Dependencies.TestLibraries.junitApi
-    testRuntimeOnly Dependencies.TestLibraries.junitEngine
+    testImplementation Dependencies.TestLibraries.junitEngine
+    testImplementation Dependencies.TestLibraries.robolectric
     testImplementation Dependencies.TestLibraries.mockk
+    testImplementation Dependencies.TestLibraries.junit4
+    testImplementation Dependencies.TestLibraries.testRunner
+    testImplementation Dependencies.TestLibraries.testExt
+    testImplementation Dependencies.TestLibraries.espressoCore
+    testImplementation Dependencies.TestLibraries.testCore
+    testImplementation Dependencies.TestLibraries.testRules
+    testImplementation "androidx.fragment:fragment-testing:1.2.5"
 }
 
 apply from: rootProject.file('../maven-publish.gradle')
