--- a/android/preview/src/main/AndroidManifest.xml
+++ b/android/preview/src/main/AndroidManifest.xml
@@ -14,4 +14,12 @@
   ~ limitations under the License.
   -->
 
-<manifest package="br.com.zup.beagle.android.preview" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="br.com.zup.beagle.android.preview">
+
+    <application
+        android:theme="@style/Theme.AppCompat.NoActionBar">
+        <activity android:name="br.com.zup.beagle.android.preview.PreviewActivity" />
+
+    </application>
+</manifest>
