starting add proguard

--- a/android/sample/build.gradle
+++ b/android/sample/build.gradle
@@ -22,6 +22,14 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
+    signingConfigs {
+        beaglesample {
+            storeFile file('/Users/uziasferreira/Desktop/beaglesample')
+            storePassword 'beaglesample'
+            keyAlias 'beaglesample'
+            keyPassword 'beaglesample'
+        }
+    }
     compileSdkVersion Dependencies.Versions.compileSdk
     buildToolsVersion Dependencies.Versions.buildTools
     defaultConfig {
@@ -45,8 +53,10 @@ android {
             testCoverageEnabled true
         }
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.beaglesample
         }
     }
 
