--- a/android/sample/build.gradle
+++ b/android/sample/build.gradle
@@ -26,7 +26,7 @@ android {
         beaglesample {
             storeFile file('/Users/uziasferreira/Desktop/beaglesample')
             storePassword 'beaglesample'
-            keyAlias 'beaglesample'
+            keyAlias 'key0'
             keyPassword 'beaglesample'
         }
     }
