--- a/android/sample/build.gradle
+++ b/android/sample/build.gradle
@@ -55,6 +55,7 @@ android {
         release {
             minifyEnabled true
             shrinkResources true
+            debuggable true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.beaglesample
         }
