chore: add unit tests and refactor to android listView
Signed-off-by: paulomeurerzup <paulo.meurer@zup.com.br>

--- a/android/beagle/build.gradle
+++ b/android/beagle/build.gradle
@@ -92,6 +92,11 @@ dependencies {
     // Unit Testing
     testImplementation Dependencies.TestLibraries.junitApi
     testRuntimeOnly Dependencies.TestLibraries.junitEngine
+//    testImplementation Dependencies.TestLibraries.robolectric
+    testImplementation "org.robolectric:robolectric:4.3"
+    testImplementation Dependencies.TestLibraries.junit4
+    testImplementation Dependencies.TestLibraries.testRunner
+    testImplementation Dependencies.TestLibraries.testExt
 
     testImplementation Dependencies.TestLibraries.kotlinCoroutinesTest
     testImplementation Dependencies.TestLibraries.mockk
