--- a/android/beagle/build.gradle
+++ b/android/beagle/build.gradle
@@ -61,6 +61,7 @@ android {
         unitTests.all {
             useJUnitPlatform()
         }
+        unitTests.includeAndroidResources = true
     }
 
 }
