--- a/android/beagle/build.gradle
+++ b/android/beagle/build.gradle
@@ -93,8 +93,7 @@ dependencies {
     // Unit Testing
     testImplementation Dependencies.TestLibraries.junitApi
     testRuntimeOnly Dependencies.TestLibraries.junitEngine
-//    testImplementation Dependencies.TestLibraries.robolectric
-    testImplementation "org.robolectric:robolectric:4.3"
+    testImplementation Dependencies.TestLibraries.robolectric
     testImplementation Dependencies.TestLibraries.junit4
     testImplementation Dependencies.TestLibraries.testRunner
     testImplementation Dependencies.TestLibraries.testExt
