adjust sonar timeout

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -33,7 +33,10 @@ POM_URL=https\://github.com/ZupIT/beagle
 
 GROUP=br.com.zup.beagle
 POM_ARTIFACT_ID=""
-VERSION_NAME=1.5.0
+VERSION_NAME=1.5.1
+
+# Increase timeout when pushing to Sonatype (otherwise we get timeouts)s
+systemProp.org.gradle.internal.http.socketTimeout=120000
 
 android.enableJetifier=true
 android.useAndroidX=true
