fix: sonar time out

--- a/backend/gradle.properties
+++ b/backend/gradle.properties
@@ -22,6 +22,9 @@ org.gradle.parallel=true
 org.gradle.daemon=true
 org.gradle.caching= true
 
+# Increase timeout when pushing to Sonatype (otherwise we get timeouts)s
+systemProp.org.gradle.internal.http.socketTimeout=120000
+
 # Publication
 POM_NAME=beagle
 POM_DESCRIPTION=A framework to help implement Server-Driven UI in your apps natively.
