chore: improve android ListView unit Tests (#1245)
* chore: add unit tests and refactor to android listView

Signed-off-by: paulomeurerzup <paulo.meurer@zup.com.br>

* chore: improve android ListView unit tests

Signed-off-by: paulomeurerzup <paulo.meurer@zup.com.br>

* chore: improve android ListView unit tests

Signed-off-by: paulomeurerzup <paulo.meurer@zup.com.br>

* fix: adjust android sample main activity

Signed-off-by: paulomeurerzup <paulo.meurer@zup.com.br>

* fix: adjust robolectric dependencie

Signed-off-by: paulomeurerzup <paulo.meurer@zup.com.br>

* refactor: remove commented lines

Signed-off-by: paulomeurerzup <paulo.meurer@zup.com.br>

* refactor: removed unused imports

Signed-off-by: paulomeurerzup <paulo.meurer@zup.com.br>

* refactor: removed unused imports

Signed-off-by: paulomeurerzup <paulo.meurer@zup.com.br>

* refactor: added unit tests to ListAdapter

Signed-off-by: paulomeurerzup <paulo.meurer@zup.com.br>

--- a/android/beagle/build.gradle
+++ b/android/beagle/build.gradle
@@ -61,6 +61,7 @@ android {
         unitTests.all {
             useJUnitPlatform()
         }
+        unitTests.includeAndroidResources = true
     }
 
 }
@@ -92,6 +93,10 @@ dependencies {
     // Unit Testing
     testImplementation Dependencies.TestLibraries.junitApi
     testRuntimeOnly Dependencies.TestLibraries.junitEngine
+    testImplementation Dependencies.TestLibraries.robolectric
+    testImplementation Dependencies.TestLibraries.junit4
+    testImplementation Dependencies.TestLibraries.testRunner
+    testImplementation Dependencies.TestLibraries.testExt
 
     testImplementation Dependencies.TestLibraries.kotlinCoroutinesTest
     testImplementation Dependencies.TestLibraries.mockk
