test: adds unit tests for the toolbar title generator (#1236)
* Inclusion of Robolectric for tests and realization of tests to verify the title manager in the toolbar

Signed-off-by: jenifersantoszup <jenifer.santos@zup.com.br>

* Code organization

Signed-off-by: jenifersantoszup <jenifer.santos@zup.com.br>

* Adds new testing pattern

Signed-off-by: jenifersantoszup <jenifer.santos@zup.com.br>

* Adequacy of tests to the pattern

Signed-off-by: jenifersantoszup <jenifer.santos@zup.com.br>

* Imports organization

Signed-off-by: jenifersantoszup <jenifer.santos@zup.com.br>

--- a/android/beagle/build.gradle
+++ b/android/beagle/build.gradle
@@ -26,6 +26,7 @@ apply from: rootProject.file('jacoco-android.gradle')
 android {
     compileSdkVersion Dependencies.Versions.compileSdk
     buildToolsVersion Dependencies.Versions.buildTools
+    testOptions.unitTests.includeAndroidResources = true
 
     defaultConfig {
         minSdkVersion Dependencies.Versions.minSdk
@@ -58,10 +59,11 @@ android {
     }
 
     testOptions {
+        unitTests.returnDefaultValues = true
+
         unitTests.all {
             useJUnitPlatform()
         }
-        unitTests.includeAndroidResources = true
     }
 
 }
@@ -91,17 +93,22 @@ dependencies {
     implementation Dependencies.MoshiLibraries.adapters
 
     // Unit Testing
-    testImplementation Dependencies.TestLibraries.junitApi
-    testRuntimeOnly Dependencies.TestLibraries.junitEngine
-    testImplementation Dependencies.TestLibraries.robolectric
-    testImplementation Dependencies.TestLibraries.junit4
-    testImplementation Dependencies.TestLibraries.testRunner
-    testImplementation Dependencies.TestLibraries.testExt
-
     testImplementation Dependencies.TestLibraries.kotlinCoroutinesTest
     testImplementation Dependencies.TestLibraries.mockk
     testImplementation Dependencies.TestLibraries.archCoreTesting
     testImplementation Dependencies.GeneralLibraries.jsonObject
+
+    testImplementation Dependencies.TestLibraries.junitApi
+    testImplementation Dependencies.TestLibraries.junitEngine
+    testImplementation Dependencies.TestLibraries.junit4
+    testImplementation Dependencies.TestLibraries.junitVintageEngine
+
+    testImplementation Dependencies.TestLibraries.testRunner
+    testImplementation Dependencies.TestLibraries.testExt
+    testImplementation Dependencies.TestLibraries.espressoCore
+    testImplementation Dependencies.TestLibraries.testCore
+    testImplementation Dependencies.TestLibraries.testRules
+    testImplementation Dependencies.TestLibraries.robolectric
 }
 
 apply from: rootProject.file('../maven-publish.gradle')
