horusec manager curl att

--- a/.github/workflows/horusec_pr.yml
+++ b/.github/workflows/horusec_pr.yml
@@ -18,5 +18,5 @@ jobs:
       #The two hash was added because we have False Positive on TextInput.swift, we have an enum called PASSWORD, and UrlBuilderDefault.kt, we have a base64 failure but we don't use the base64 on this code
       run: |
         curl -fsSL https://horusec.io/bin/install.sh | bash
-        horusec start -p ./ --ignore="**/sample/**,**/.gradle/**,**/automatedTests/**,**/automated-tests/**" -G="true" -a="$HORUSEC_CLI_REPOSITORY_AUTHORIZATION" -n="beagle" -e="true" -F="f724792634fb01a17e7a3ff52dbabdd28388653aca1d726f1bbc1945eed8c4f3,ee5c797510e940f30b021f481137f5df140b2cd3d66d6a15eef07a25c0580f92" -u "https://api-horusec.zup.com.br"
+        horusec start -p ./ --ignore="**/sample/**,**/.gradle/**,**/automatedTests/**,**/automated-tests/**" -a "$HORUSEC_CLI_REPOSITORY_AUTHORIZATION" -n "beagle" -e "true" -u "https://api-horusec.zup.com.br"  -G "true" -F "f724792634fb01a17e7a3ff52dbabdd28388653aca1d726f1bbc1945eed8c4f3,ee5c797510e940f30b021f481137f5df140b2cd3d66d6a15eef07a25c0580f92"
     
