--- a/.github/workflows/ios-pr.yml
+++ b/.github/workflows/ios-pr.yml
@@ -35,7 +35,7 @@ jobs:
             -   name: Cache SPM dependencies
                 uses: actions/cache@v2
                 with:
-                    path: ~/**/DerivedData
+                    path: ~/**/DerivedData/**/SourcePackages
                     key: ${{ runner.os }}-spm-${{ hashFiles('iOS/**/Package.resolved') }}
                     restore-keys: ${{ runner.os }}-spm
 
