removing listview and adapting path for unix systems

--- a/android/android-annotation/build.gradle
+++ b/android/android-annotation/build.gradle
@@ -27,4 +27,4 @@ dependencies {
     implementation Dependencies.MoshiLibraries.moshi
 }
 
-apply from: new File('/../../maven-publish.gradle')
+apply from: new File('./../../maven-publish.gradle')
