--- a/android/processor-shared-code/build.gradle
+++ b/android/processor-shared-code/build.gradle
@@ -17,7 +17,7 @@
 import br.com.zup.beagle.Dependencies
 
 apply plugin: 'kotlin'
-apply from: "/../../jacoco.gradle"
+apply from: "./../../jacoco.gradle"
 
 dependencies {
     implementation Dependencies.GeneralLibraries.kotlin
@@ -25,4 +25,4 @@ dependencies {
     implementation project(Dependencies.Modules.androidAnnotation)
 }
 
-apply from: new File('/../../maven-publish.gradle')
+apply from: new File('./../../maven-publish.gradle')
