--- a/tests/appium/project/build.gradle
+++ b/tests/appium/project/build.gradle
@@ -1,5 +1,20 @@
+/*
+ * Copyright 2020 ZUP IT SERVICOS EM TECNOLOGIA E INOVACAO SA
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 plugins {
-    //id 'org.jetbrains.kotlin.jvm' version '1.3.72'
     id 'org.jetbrains.kotlin.jvm' version "1.4.20-RC"
     id 'java'
 }
@@ -24,15 +39,6 @@ dependencies {
 
     testImplementation 'io.cucumber:cucumber-java:6.8.2'
     testImplementation 'io.cucumber:cucumber-junit:6.8.2'
-
-//    compile group: 'io.cucumber', name: 'cucumber-core', version: '6.8.1'
-//    compile group: 'io.cucumber', name: 'cucumber-java', version: '6.8.1'
-//    testImplementation group: 'io.cucumber', name: 'cucumber-junit', version: '6.8.1'
-
-//    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
-//    testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.0")
-//    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.0")
-
 }
 
 configurations {
@@ -63,54 +69,5 @@ task cucumber() {
 
 
 test {
-//    useJUnitPlatform()
     systemProperty "platform", System.getProperty("platform")
 }
-
-
-// debug works!
-//apply plugin: "application"
-//mainClassName = 'temp.Main'
-
-// debug ignores breakpoints!
-//task debugTest() {
-//    dependsOn assemble, testClasses
-//    doLast {
-//        javaexec {
-//            group = "Execution"
-//            description = "Run the main class with JavaExecTask"
-//            classpath = sourceSets.main.runtimeClasspath
-//            main = "temp.Main"
-//        }
-//    }
-//}
-//
-//// debug works!!
-//task debugTest2(type:JavaExec) {
-//    group = "Execution"
-//    description = "Run the main class with JavaExecTask"
-//    classpath = sourceSets.main.runtimeClasspath
-//    main = "temp.Main"
-//}
-//
-//// debug works!
-//task debugTest3() {
-//    javaexec{
-//        group = "Execution"
-//        description = "Run the main class with JavaExecTask"
-//        classpath = sourceSets.main.runtimeClasspath
-//        main = "temp.Main"
-//    }
-//}
-//
-//// debug ignores breakpoint!
-//task debugTest4() {
-//    doLast {
-//        javaexec{
-//            group = "Execution"
-//            description = "Run the main class with JavaExecTask"
-//            classpath = sourceSets.main.runtimeClasspath
-//            main = "temp.Main"
-//        }
-//    }
-//}
