--- a/android/preview/build.gradle
+++ b/android/preview/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     implementation project(Dependencies.Modules.core)
 
     // Unit Testing
+    testImplementation project(Dependencies.Modules.test)
     testImplementation Dependencies.TestLibraries.junitApi
     testImplementation Dependencies.TestLibraries.junitEngine
     testImplementation Dependencies.TestLibraries.robolectric
