--- a/flutter/javascript-bridge/package.json
+++ b/flutter/javascript-bridge/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "tsc"
+    "build": "webpack"
   },
   "dependencies": {
-    "@zup-it/beagle-web": "^1.5.0"
+    "@zup-it/beagle-web": "^1.5.0",
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.165",
     "ts-loader": "^8.0.11",
     "typescript": "^4.1.2",
     "webpack": "^5.10.0",
