feat: integrate core web in flutter (#1249)
* feat: create beagle core struct

* adjust code owners

* remove dependency dont need in beagle

* add codeowner

* fixing structure and assets (#1267)

* fixing structure and assets

* remove local gitignore

* remove beagle core js and put in beagle

* refactor: updated gradle and kotlin versions and beagle components description

* JS functions better memory management + improved code separation (#1269)

* fixing structure and assets

* remove local gitignore

* typescript code re-organization + better memory management for functions

* moving js folder

* Flutter: Beagle Style (#1270)

* fixing structure and assets

* remove local gitignore

* typescript code re-organization + better memory management for functions

* moving js folder

* support to styles in the BeagleUIElement

* removes unused map utils

* license headers

* feat: flutter custom actions (#1272)

* fixing structure and assets

* remove local gitignore

* typescript code re-organization + better memory management for functions

* moving js folder

* support to styles in the BeagleUIElement

* removes unused map utils

* license headers

* custom actions for flutter

Co-authored-by: Tiago Peres França <tiagoperesfr@gmail.com>
Co-authored-by: Matheus Ribeiro <matheus.ribeiro@zup.com.br>

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,12 @@ fastlane/test_output/
 ### Jacoco ###
 jacoco.exec
 
+# NPM/YARN related
+node_modules
+yarn.lock
+package-lock.json
+yarn.error
+
 # Flutter/Dart/Pub related
 flutter/**/**/doc/api/
 flutter/**/.dart_tool/
@@ -58,6 +64,7 @@ flutter/**/.packages
 flutter/**/.pub-cache/
 flutter/**/.pub/
 flutter/**/build/
+flutter/**/pubspec.lock
 flutter_analyze_report.txt
 coverage/
 lcov.info
