refactory, package renaming, removed unnecessary info

--- a/tests/appium/app-android/app/build.gradle
+++ b/tests/appium/app-android/app/build.gradle
@@ -33,7 +33,7 @@ android {
     compileSdkVersion Dependencies.Versions.compileSdk
 
     defaultConfig {
-        applicationId "br.com.zup.beagle.appiumApp"
+        applicationId "br.com.zup.beagle.appiumapp"
         minSdkVersion Dependencies.Versions.targetSdk
         targetSdkVersion Dependencies.Versions.compileSdk
         versionCode Dependencies.Releases.versionCode
