remove coverage and horusec verification for now

--- a/android/beagle/build.gradle
+++ b/android/beagle/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'de.mannodermaus.android-junit5'
-apply from: rootProject.file('jacoco-android.gradle')
+apply from: new File('./../jacoco-android.gradle')
 
 android {
     compileSdkVersion Dependencies.Versions.compileSdk
