ios commit generated schema files

--- a/iOS/.gitignore
+++ b/iOS/.gitignore
@@ -74,4 +74,4 @@ iOSInjectionProject/
 
 # Schema Generated sources
 #
-Sources/Beagle/Sources/SchemaGenerated
+# Sources/Beagle/Sources/SchemaGenerated
