feat: Adds support for generation of dokka documentation to hugo md files (#1276)
* :sparkles: Adds support for generation of dokka documentation to hugo md files

Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>

* :sparkles: Adds support for generation of dokka documentation to hugo md files

Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>

--- a/android/beagle/build.gradle
+++ b/android/beagle/build.gradle
@@ -112,3 +112,13 @@ dependencies {
 }
 
 apply from: rootProject.file('../maven-publish.gradle')
+
+/**
+ *  https://github.com/cotechde/dokka-hugo-plugin
+ *  To run this task by ./gradlew dokkaHugo
+ */
+task dokkaHugo(type: org.jetbrains.dokka.gradle.DokkaTask) {
+    dependencies {
+        dokkaHugoPlugin 'com.github.cotechde:dokka-hugo-plugin:master-SNAPSHOT'
+    }
+}
