--- a/android/beagle/build.gradle
+++ b/android/beagle/build.gradle
@@ -122,3 +122,4 @@ task dokkaHugo(type: org.jetbrains.dokka.gradle.DokkaTask) {
         dokkaHugoPlugin 'com.github.cotechde:dokka-hugo-plugin:master-SNAPSHOT'
     }
 }
+// test - this comment won't be merged
