testing script on branch

--- a/.github/workflows/automated_tests_appium_android.yml
+++ b/.github/workflows/automated_tests_appium_android.yml
@@ -1,6 +1,16 @@
 name: Beagle Appium Android Tests
 
-on: workflow_dispatch
+# on: workflow_dispatch
+# testing for this PULL REQUEST only. Will be set back to 'workflow_dispatch' afterwards 
+on:
+    push:
+        branches:
+            - master
+        paths:
+            - '.github/**'
+    pull_request:
+        paths:
+            - '.github/**'
 
 jobs:
     run-automated-tests:
